opam-version: "2.0"
maintainer: "Guillaume Hennequin"
authors: [ "Guillaume Hennequin" ]
license: "MIT"
homepage: "https://github.com/ghennequin/bal"
dev-repo: "git+https://github.com/ghennequin/bal.git"
bug-reports: "https://github.com/ghennequin/bal/issues"
doc: "https://ghennequin.github.io/bal/"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {build & >= "1.1.0"}
  "base-bigarray"
]
synopsis: "Change of layout for Bigarrays (Fortran ←→ C)"
